--- a/quest/020-real-world-physics.html
+++ b/quest/020-real-world-physics.html
@@ -1,1 +1,71 @@
-020-real-world-physics.html
+<!--
+How to Enable Real World Mesh In Quest 3
+- Open Quick Settings > Settings > Environmental Setup > Space Setup
+- Scan Your Room
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Passthrough + Physics + Real-World Meshing</title>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@c-frame/aframe-physics-system@4.2.2/dist/aframe-physics-system.min.js"></script>
+  </head>
+  <body>
+    <a-scene
+      xr-mode-ui="enabled: true; XRMode: ar"
+      webxr="optionalFeatures: ['plane-detection', 'mesh-detection', 'hand-tracking']"
+      physics="gravity: -9.8; debug: true"
+      real-world-meshing="meshMixin: mesh-mixin; planeMixin: plane-mixin"
+      background="transparent: true"
+    >
+      <a-assets>
+        <a-mixin
+          id="mesh-mixin"
+          material="color: red; opacity: 0.5"
+          static-body
+        ></a-mixin>
+        <a-mixin
+          id="plane-mixin"
+          material="color: blue; opacity: 0.3"
+          static-body
+        ></a-mixin>
+      </a-assets>
+      <a-entity id="leftHand" oculus-touch-controls="hand: left"></a-entity>
+      <a-entity id="rightHand" oculus-touch-controls="hand: right"></a-entity>
+      <a-camera></a-camera>
+    </a-scene>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const scene = document.querySelector("a-scene");
+        const leftHand = document.getElementById("leftHand");
+        const rightHand = document.getElementById("rightHand");
+
+        function spawnCube(event) {
+          const hand = event.target;
+          const position = hand.object3D.position;
+
+          const newCube = document.createElement("a-box");
+          newCube.setAttribute(
+            "position",
+            `${position.x} ${position.y} ${position.z}`
+          );
+          newCube.setAttribute("scale", "0.1 0.1 0.1");
+          newCube.setAttribute("color", "#FF0000");
+          newCube.setAttribute("dynamic-body", "");
+
+          scene.appendChild(newCube);
+          console.log(
+            `Cube spawned at: ${position.x}, ${position.y}, ${position.z}`
+          );
+        }
+
+        leftHand.addEventListener("triggerdown", spawnCube);
+        rightHand.addEventListener("triggerdown", spawnCube);
+      });
+    </script>
+  </body>
+</html>
+
