--- a/quest/026-matter-js.html
+++ b/quest/026-matter-js.html
@@ -12,9 +12,8 @@
         <canvas id="canvas" width="256" height="256"></canvas>
       </a-assets>
       <a-plane position="0 1.5 -2" material="src: #canvas; transparent: true" canvas-updater></a-plane>
-      <a-camera>
-        <a-entity id="rightHand" meta-touch-controls="hand: right"></a-entity>
-      </a-camera>
+      <a-entity id="rightHand" meta-touch-controls="hand: right"></a-entity>
+      <a-camera></a-camera>
     </a-scene>
 
     <script>
